# ComputationalPhylogenetics

./: .gitignore  .pre-commit-config.yaml  README.md  caucasian.csv  caucasian_datagen.py  main.py  pyproject.toml
computationalphylogenetics/: data.py  model.py
